package com.gogame.demo;

public enum GameStatus {
    WAITING_FOR_PLAYERS,
    IN_PROGRESS,
    FINISHED,
    RESIGNED
}
