package com.gogame.domain.enums;

public enum StoneColor {
    BLACK,
    WHITE,
    EMPTY
}
